// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferTravelFundsPage should not show PageFooterWcmSourced when in a webview 1`] = `
<div>
  <div>
    <div
      class="page-header action-bar"
      id=""
    >
      <ul
        class="action-bar-buttons action-bar--left-buttons"
      />
      <div
        class="action-bar--container"
      >
        <div
          class="action-bar--title"
        >
          <span
            class="action-bar--main-title"
          >
            TRAVEL_FUNDS__TRANSFER_PAGE__HEADER
          </span>
          <span
            class="action-bar--sub-title"
          />
        </div>
      </div>
      <ul
        class="action-bar-buttons action-bar--right-buttons"
      >
        <li
          class="action-bar-buttons--item"
        >
          <button
            class="button"
            type="button"
          >
            SHARED__BUTTON_TEXT__CANCEL
          </button>
        </li>
      </ul>
    </div>
    <div />
  </div>
  <div
    class="eligibile-funds-card"
  >
    <div
      class="eligibile-funds-card--title"
    >
      TRAVEL_FUNDS__ELIGIBLE_FUNDS__HEADER
    </div>
    <div
      class="eligibile-funds-card--container"
    >
      <div
        class="eligibile-funds-card--content"
      >
        <div
          class="travel-fund--image_rtf-leisure credit-card--image left mr2"
        />
        <div
          class="eligible-funds-card--description"
        >
          <div
            class="eligible-funds-card--name"
          >
            Thomas Shelby
          </div>
          <div
            class="eligible-funds-card--pnr"
          >
            00000
          </div>
          <div
            class="eligible-funds-card--expiration"
          >
             
            EXPIRATION_TEXT: 03/17/2030
             
          </div>
          <div
            class="eligible-funds-card--learn-more"
          >
            <p>
              <a
                href="https://www.southwest.com/faq/travel-funds-general-info"
                target="_blank"
              >
                Learn More
              </a>
            </p>
          </div>
        </div>
        <div
          class="eligible-funds-card--amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              50.00
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <form
    class="transfer-travel-funds-form form"
    name="TRANSFER_TRAVEL_FUNDS_FORM"
    novalidate=""
  >
    <fieldset>
      <div
        class="segments"
      >
        <div
          class="segment"
        >
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              TRANSFER_RECIPIENT_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="firstName"
                  placeholder="FIRST_NAME_PLACEHOLDER"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="lastName"
                  placeholder="LAST_NAME_PLACEHOLDER"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="rapidRewardsNumber"
                  placeholder="RR_PLACEHOLDER"
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <p
              class="helper-text"
            >
              mock First name, mock last name, and mock Rapid Rewards® number must match Rapid Rewards account information on file.
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              RECIPIENT_EMAIL_ADDRESS_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="recipientEmailAddress"
                  placeholder="RECIPIENT_EMAIL_ADDRESS_PLACEHOLDER"
                  type="email"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              PERSONAL_MESSAGE_LABEL
            </label>
            <label
              class="fields--secondary-label"
            >
              340 PERSONAL_MESSAGE_CHARACTERS_LEFT
            </label>
            <div
              class="field"
            >
              <div
                class="text-area-container"
              >
                <textarea
                  class="text-area "
                  maxlength="340"
                  placeholder="PERSONAL_MESSAGE_PLACEHOLDER"
                  rows="6"
                />
              </div>
            </div>
            <p
              class="helper-text"
            >
              PERSONAL_MESSAGE_HELPER_TEXT
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              AUTO_RECEIPT_LABEL
            </label>
            <p
              class="helper-text"
            >
              AUTO_RECEIPT_HELPER_TEXT
            </p>
            <p
              class="helper-text receipt-email"
            >
              e@a.com
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              ADDITIONAL_RECEIPT_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="additionalReceipt"
                  placeholder="ADDITIONAL_RECEIPT_PLACEHOLDER"
                  type="email"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="blue inverted segment"
          color="blue"
        >
          <div
            class="price-total"
          >
            <div
              class="price-total--info"
            >
              <div
                class="price-line"
              >
                <span
                  class="price-line--title"
                >
                  TRANSFER_AMOUNT_TITLE
                </span>
                <div
                  class="price-amount"
                >
                  <div
                    class="price-line--currency_total"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        50.00
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="purchase-disclaimer"
          >
            TRAVEL_FUNDS_TRANSFER_DISCLAIMER
          </div>
          <button
            class="transfer-travel-funds-button button button--fluid huge"
            type="submit"
          >
            Transfer travel funds
          </button>
        </div>
      </div>
    </fieldset>
  </form>
  <div
    class="transfer-travel-funds-footer"
  />
</div>
`;

exports[`TransferTravelFundsPage should render the page 1`] = `
<div>
  <div>
    <div
      class="page-header action-bar"
      id=""
    >
      <ul
        class="action-bar-buttons action-bar--left-buttons"
      />
      <div
        class="action-bar--container"
      >
        <div
          class="action-bar--title"
        >
          <span
            class="action-bar--main-title"
          >
            TRAVEL_FUNDS__TRANSFER_PAGE__HEADER
          </span>
          <span
            class="action-bar--sub-title"
          />
        </div>
      </div>
      <ul
        class="action-bar-buttons action-bar--right-buttons"
      >
        <li
          class="action-bar-buttons--item"
        >
          <button
            class="button"
            type="button"
          >
            SHARED__BUTTON_TEXT__CANCEL
          </button>
        </li>
      </ul>
    </div>
    <div />
  </div>
  <div
    class="eligibile-funds-card"
  >
    <div
      class="eligibile-funds-card--title"
    >
      TRAVEL_FUNDS__ELIGIBLE_FUNDS__HEADER
    </div>
    <div
      class="eligibile-funds-card--container"
    >
      <div
        class="eligibile-funds-card--content"
      >
        <div
          class="travel-fund--image_rtf-leisure credit-card--image left mr2"
        />
        <div
          class="eligible-funds-card--description"
        >
          <div
            class="eligible-funds-card--name"
          >
            Thomas Shelby
          </div>
          <div
            class="eligible-funds-card--pnr"
          >
            00000
          </div>
          <div
            class="eligible-funds-card--expiration"
          >
             
            EXPIRATION_TEXT: 03/17/2030
             
          </div>
          <div
            class="eligible-funds-card--learn-more"
          >
            <p>
              <a
                href="https://www.southwest.com/faq/travel-funds-general-info"
                target="_blank"
              >
                Learn More
              </a>
            </p>
          </div>
        </div>
        <div
          class="eligible-funds-card--amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              50.00
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <form
    class="transfer-travel-funds-form form"
    name="TRANSFER_TRAVEL_FUNDS_FORM"
    novalidate=""
  >
    <fieldset>
      <div
        class="segments"
      >
        <div
          class="segment"
        >
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              TRANSFER_RECIPIENT_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="firstName"
                  placeholder="FIRST_NAME_PLACEHOLDER"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="lastName"
                  placeholder="LAST_NAME_PLACEHOLDER"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="rapidRewardsNumber"
                  placeholder="RR_PLACEHOLDER"
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <p
              class="helper-text"
            >
              mock First name, mock last name, and mock Rapid Rewards® number must match Rapid Rewards account information on file.
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              RECIPIENT_EMAIL_ADDRESS_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="recipientEmailAddress"
                  placeholder="RECIPIENT_EMAIL_ADDRESS_PLACEHOLDER"
                  type="email"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              PERSONAL_MESSAGE_LABEL
            </label>
            <label
              class="fields--secondary-label"
            >
              340 PERSONAL_MESSAGE_CHARACTERS_LEFT
            </label>
            <div
              class="field"
            >
              <div
                class="text-area-container"
              >
                <textarea
                  class="text-area "
                  maxlength="340"
                  placeholder="PERSONAL_MESSAGE_PLACEHOLDER"
                  rows="6"
                />
              </div>
            </div>
            <p
              class="helper-text"
            >
              PERSONAL_MESSAGE_HELPER_TEXT
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              AUTO_RECEIPT_LABEL
            </label>
            <p
              class="helper-text"
            >
              AUTO_RECEIPT_HELPER_TEXT
            </p>
            <p
              class="helper-text receipt-email"
            >
              e@a.com
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              ADDITIONAL_RECEIPT_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="additionalReceipt"
                  placeholder="ADDITIONAL_RECEIPT_PLACEHOLDER"
                  type="email"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="blue inverted segment"
          color="blue"
        >
          <div
            class="price-total"
          >
            <div
              class="price-total--info"
            >
              <div
                class="price-line"
              >
                <span
                  class="price-line--title"
                >
                  TRANSFER_AMOUNT_TITLE
                </span>
                <div
                  class="price-amount"
                >
                  <div
                    class="price-line--currency_total"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        50.00
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="purchase-disclaimer"
          >
            TRAVEL_FUNDS_TRANSFER_DISCLAIMER
          </div>
          <button
            class="transfer-travel-funds-button button button--fluid huge"
            type="submit"
          >
            Transfer travel funds
          </button>
        </div>
      </div>
    </fieldset>
  </form>
  <div
    class="transfer-travel-funds-footer"
  >
    <div
      class="page-footer-wcm"
    >
      <span
        class="page-footer-wcm--copyright"
      >
        ©
        2024
         
        SHARED__FOOTER__ALL_RIGHTS_RESERVED
      </span>
    </div>
  </div>
</div>
`;

exports[`TransferTravelFundsPage should render the webview version of the page 1`] = `
<div>
  <div>
    <div
      class="page-header action-bar"
      id=""
    >
      <ul
        class="action-bar-buttons action-bar--left-buttons"
      />
      <div
        class="action-bar--container"
      >
        <div
          class="action-bar--title"
        >
          <span
            class="action-bar--main-title"
          >
            TRAVEL_FUNDS__TRANSFER_PAGE__HEADER
          </span>
          <span
            class="action-bar--sub-title"
          />
        </div>
      </div>
      <ul
        class="action-bar-buttons action-bar--right-buttons"
      >
        <li
          class="action-bar-buttons--item"
        >
          <button
            class="button"
            type="button"
          >
            SHARED__BUTTON_TEXT__CANCEL
          </button>
        </li>
      </ul>
    </div>
    <div />
  </div>
  <div
    class="eligibile-funds-card"
  >
    <div
      class="eligibile-funds-card--title"
    >
      TRAVEL_FUNDS__ELIGIBLE_FUNDS__HEADER
    </div>
    <div
      class="eligibile-funds-card--container"
    >
      <div
        class="eligibile-funds-card--content"
      >
        <div
          class="travel-fund--image_rtf-leisure credit-card--image left mr2"
        />
        <div
          class="eligible-funds-card--description"
        >
          <div
            class="eligible-funds-card--name"
          >
            Thomas Shelby
          </div>
          <div
            class="eligible-funds-card--pnr"
          >
            00000
          </div>
          <div
            class="eligible-funds-card--expiration"
          >
             
            EXPIRATION_TEXT: 03/17/2030
             
          </div>
          <div
            class="eligible-funds-card--learn-more"
          >
            <p>
              <a
                href="https://www.southwest.com/faq/travel-funds-general-info"
                target="_blank"
              >
                Learn More
              </a>
            </p>
          </div>
        </div>
        <div
          class="eligible-funds-card--amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              50.00
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <form
    class="transfer-travel-funds-form form"
    name="TRANSFER_TRAVEL_FUNDS_FORM"
    novalidate=""
  >
    <fieldset>
      <div
        class="segments"
      >
        <div
          class="segment"
        >
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              TRANSFER_RECIPIENT_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="firstName"
                  placeholder="FIRST_NAME_PLACEHOLDER"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="lastName"
                  placeholder="LAST_NAME_PLACEHOLDER"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="rapidRewardsNumber"
                  placeholder="RR_PLACEHOLDER"
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <p
              class="helper-text"
            >
              mock First name, mock last name, and mock Rapid Rewards® number must match Rapid Rewards account information on file.
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              RECIPIENT_EMAIL_ADDRESS_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="recipientEmailAddress"
                  placeholder="RECIPIENT_EMAIL_ADDRESS_PLACEHOLDER"
                  type="email"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              PERSONAL_MESSAGE_LABEL
            </label>
            <label
              class="fields--secondary-label"
            >
              340 PERSONAL_MESSAGE_CHARACTERS_LEFT
            </label>
            <div
              class="field"
            >
              <div
                class="text-area-container"
              >
                <textarea
                  class="text-area "
                  maxlength="340"
                  placeholder="PERSONAL_MESSAGE_PLACEHOLDER"
                  rows="6"
                />
              </div>
            </div>
            <p
              class="helper-text"
            >
              PERSONAL_MESSAGE_HELPER_TEXT
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              AUTO_RECEIPT_LABEL
            </label>
            <p
              class="helper-text"
            >
              AUTO_RECEIPT_HELPER_TEXT
            </p>
            <p
              class="helper-text receipt-email"
            >
              e@a.com
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              ADDITIONAL_RECEIPT_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="additionalReceipt"
                  placeholder="ADDITIONAL_RECEIPT_PLACEHOLDER"
                  type="email"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="blue inverted segment"
          color="blue"
        >
          <div
            class="price-total"
          >
            <div
              class="price-total--info"
            >
              <div
                class="price-line"
              >
                <span
                  class="price-line--title"
                >
                  TRANSFER_AMOUNT_TITLE
                </span>
                <div
                  class="price-amount"
                >
                  <div
                    class="price-line--currency_total"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        50.00
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="purchase-disclaimer"
          >
            TRAVEL_FUNDS_TRANSFER_DISCLAIMER
          </div>
          <button
            class="transfer-travel-funds-button button button--fluid huge"
            type="submit"
          >
            Transfer travel funds
          </button>
        </div>
      </div>
    </fieldset>
  </form>
  <div
    class="transfer-travel-funds-footer"
  />
</div>
`;

exports[`TransferTravelFundsPage should show PageFooterWcmSourced by default 1`] = `
<div>
  <div>
    <div
      class="page-header action-bar"
      id=""
    >
      <ul
        class="action-bar-buttons action-bar--left-buttons"
      />
      <div
        class="action-bar--container"
      >
        <div
          class="action-bar--title"
        >
          <span
            class="action-bar--main-title"
          >
            TRAVEL_FUNDS__TRANSFER_PAGE__HEADER
          </span>
          <span
            class="action-bar--sub-title"
          />
        </div>
      </div>
      <ul
        class="action-bar-buttons action-bar--right-buttons"
      >
        <li
          class="action-bar-buttons--item"
        >
          <button
            class="button"
            type="button"
          >
            SHARED__BUTTON_TEXT__CANCEL
          </button>
        </li>
      </ul>
    </div>
    <div />
  </div>
  <div
    class="eligibile-funds-card"
  >
    <div
      class="eligibile-funds-card--title"
    >
      TRAVEL_FUNDS__ELIGIBLE_FUNDS__HEADER
    </div>
    <div
      class="eligibile-funds-card--container"
    >
      <div
        class="eligibile-funds-card--content"
      >
        <div
          class="travel-fund--image_rtf-leisure credit-card--image left mr2"
        />
        <div
          class="eligible-funds-card--description"
        >
          <div
            class="eligible-funds-card--name"
          >
            Thomas Shelby
          </div>
          <div
            class="eligible-funds-card--pnr"
          >
            00000
          </div>
          <div
            class="eligible-funds-card--expiration"
          >
             
            EXPIRATION_TEXT: 03/17/2030
             
          </div>
          <div
            class="eligible-funds-card--learn-more"
          >
            <p>
              <a
                href="https://www.southwest.com/faq/travel-funds-general-info"
                target="_blank"
              >
                Learn More
              </a>
            </p>
          </div>
        </div>
        <div
          class="eligible-funds-card--amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              50.00
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <form
    class="transfer-travel-funds-form form"
    name="TRANSFER_TRAVEL_FUNDS_FORM"
    novalidate=""
  >
    <fieldset>
      <div
        class="segments"
      >
        <div
          class="segment"
        >
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              TRANSFER_RECIPIENT_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="firstName"
                  placeholder="FIRST_NAME_PLACEHOLDER"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="lastName"
                  placeholder="LAST_NAME_PLACEHOLDER"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="rapidRewardsNumber"
                  placeholder="RR_PLACEHOLDER"
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <p
              class="helper-text"
            >
              mock First name, mock last name, and mock Rapid Rewards® number must match Rapid Rewards account information on file.
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              RECIPIENT_EMAIL_ADDRESS_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="recipientEmailAddress"
                  placeholder="RECIPIENT_EMAIL_ADDRESS_PLACEHOLDER"
                  type="email"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              PERSONAL_MESSAGE_LABEL
            </label>
            <label
              class="fields--secondary-label"
            >
              340 PERSONAL_MESSAGE_CHARACTERS_LEFT
            </label>
            <div
              class="field"
            >
              <div
                class="text-area-container"
              >
                <textarea
                  class="text-area "
                  maxlength="340"
                  placeholder="PERSONAL_MESSAGE_PLACEHOLDER"
                  rows="6"
                />
              </div>
            </div>
            <p
              class="helper-text"
            >
              PERSONAL_MESSAGE_HELPER_TEXT
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              AUTO_RECEIPT_LABEL
            </label>
            <p
              class="helper-text"
            >
              AUTO_RECEIPT_HELPER_TEXT
            </p>
            <p
              class="helper-text receipt-email"
            >
              e@a.com
            </p>
          </div>
          <div
            class="fields grouped"
          >
            <label
              class="fields--label"
            >
              ADDITIONAL_RECEIPT_LABEL
            </label>
            <div
              class="field"
            >
              <div
                class="input"
              >
                <input
                  class=""
                  name="additionalReceipt"
                  placeholder="ADDITIONAL_RECEIPT_PLACEHOLDER"
                  type="email"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="blue inverted segment"
          color="blue"
        >
          <div
            class="price-total"
          >
            <div
              class="price-total--info"
            >
              <div
                class="price-line"
              >
                <span
                  class="price-line--title"
                >
                  TRANSFER_AMOUNT_TITLE
                </span>
                <div
                  class="price-amount"
                >
                  <div
                    class="price-line--currency_total"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        50.00
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="purchase-disclaimer"
          >
            TRAVEL_FUNDS_TRANSFER_DISCLAIMER
          </div>
          <button
            class="transfer-travel-funds-button button button--fluid huge"
            type="submit"
          >
            Transfer travel funds
          </button>
        </div>
      </div>
    </fieldset>
  </form>
  <div
    class="transfer-travel-funds-footer"
  >
    <div
      class="page-footer-wcm"
    >
      <div
        class="page-footer-wcm--row"
      >
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/mock-url"
            id="view_full_site"
            target="_blank"
          >
            View full site
          </a>
          <span
            class="page-footer-wcm--divider"
          >
            |
          </span>
        </div>
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/contact-us"
            id="contact_us"
            target="_self"
          >
            Contact us
          </a>
          <span
            class="page-footer-wcm--divider"
          >
            |
          </span>
        </div>
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/mock-url"
            id="help_center"
            target="_blank"
          >
            Help Center
          </a>
        </div>
      </div>
      <div
        class="page-footer-wcm--row"
      >
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/terms-and-conditions?clk=GNAVTC"
            id="terms_conditions"
            target="_blank"
          >
            Terms & Conditions
          </a>
          <span
            class="page-footer-wcm--divider"
          >
            |
          </span>
        </div>
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/privacy-policy?clk=GNAVPRIVACY"
            id="privacy_policy"
            target="_blank"
          >
            Privacy Policy
          </a>
        </div>
      </div>
      <div
        class="page-footer-wcm--row"
      >
        <div
          class="page-footer-wcm--link"
        >
          <a
            href="/mock-url"
            id="do_not_sell_my_info"
            target="_blank"
          >
            Do Not Sell My Info
          </a>
        </div>
      </div>
      <span
        class="page-footer-wcm--copyright"
      >
        ©
        2024
         
        SHARED__FOOTER__ALL_RIGHTS_RESERVED
      </span>
    </div>
  </div>
</div>
`;
